--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "node index.js"
+},
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
